feat: add images practice question
